k8s/manifests/bz/bulutzincir-geth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bulutzincir-geth-1-service


spec:
  type: NodePort
  ports:
    - port: 8545
      protocol: TCP
      nodePort: 30029
  selector:
    app: bulutzincir-geth-1
